tests/syntax/incorrect_syntax/no_code_block.rs
extern crate spar_rust;
use spar_rust::to_stream;

pub fn main() {
    to_stream!();
}
